fixed alignment issue & upload new banners

--- a/ogserver/src/main/resources/webroot/css/agency.css
+++ b/ogserver/src/main/resources/webroot/css/agency.css
@@ -4941,3 +4941,11 @@ a.tab-ico {
         height:30px;
     }
 }
+
+.grid-heading-col8{
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    max-width:100%;
+}
